add password input project

--- a/25-projects-course/src/index.css
+++ b/25-projects-course/src/index.css
@@ -1,6 +1,19 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+
+*:focus {
+  outline: 0px none transparent;
+}
+
 .root-nav {
+  height: 30px;
+  direction: ltr;
   margin: 5px;
   display: flex;
+  align-items: center;
   gap: 5px;
 }
 
