--- a/25-projects-course/src/Projects/2-faq/FAQ.css
+++ b/25-projects-course/src/Projects/2-faq/FAQ.css
@@ -1,4 +1,4 @@
-.faq {
+.faq-root {
     direction: rtl;
     background: rgb(73, 224, 149);
     display: flex;
@@ -7,7 +7,7 @@
     height: 100vh;
 }
 
-.container {
+.faq-container {
     background: #f8f8f8;
     margin: auto;
     width: 700px;
