--- a/25-projects-course/src/index.css
+++ b/25-projects-course/src/index.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 *:focus {
@@ -20,6 +20,7 @@ html, body {
 .root-nav-btn Button {
   font-size: smaller;
   border-radius: 5px;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .root-hr {
