--- a/25-projects-course/src/Projects/1-PassInput/PassInput.css
+++ b/25-projects-course/src/Projects/1-PassInput/PassInput.css
@@ -1,6 +1,5 @@
 .wrapper {
-    width: 100vw;
-    height: 100vh;
+    height: calc(100% - 41px); /* consider root-nav height + 1px for hr */
     background: #ffe3f6;
     display: flex;
     align-items: center;
