--- a/25-projects-course/src/Projects/2-faq/FAQ.css
+++ b/25-projects-course/src/Projects/2-faq/FAQ.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: calc(100% - 41px); /* consider root-nav height + 1px for hr */
 }
 
 .faq-container {
