--- a/25-projects-course/src/index.css
+++ b/25-projects-course/src/index.css
@@ -1,7 +1,13 @@
 html, body {
   height: 100%;
-  margin: 0;
-  /* overflow: hidden; */
+  margin: 0px;
+  padding: 0px;
+}
+
+#root {
+  height: 100%;
+  padding-top: 5px;
+  margin: 0px;
 }
 
 *:focus {
@@ -12,6 +18,7 @@ html, body {
   height: 30px;
   direction: ltr;
   margin: 5px;
+  margin-top: 0px; /* remove margin-top. we use padding-top on parent */
   display: flex;
   align-items: center;
   gap: 5px;
